# elvea

./: .gitignore  CMakeLists.txt  LICENSE  README.md
runtime/: elvea.c
runtime/elvea/: arena.c  arena.h  class.c  class.h  config.h  definitions.h  elvea.h  error.c  error.h  gc.c  gc.h  iterator.c  iterator.h  runtime.c  runtime.h  string.c  string.h  table.c  table.h  thread.c  thread.h  variant.c  variant.h
runtime/elvea/utils/: alloc.c  alloc.h  helpers.c  helpers.h
unit_test/: test.c  test.h  test_set.c.txt  test_string.c  test_table.c.txt
unit_test/cutest/: CuTest.c  CuTest.h
